# calcolo_scientifico

./: prova3.txt  settings_git
esercitazione1/: CMakeLists.txt  medie.cpp
esercitazione2/: CMakeLists.txt  algoritmo_es2.cpp  bubblesort.cpp  esercizio_es2.cpp
esercitazione3/: CMakeLists.txt  es_rational.cpp  rational_class.hpp
esercitazione4/: CMakeLists.txt  alg_sorting.hpp  confronto_tempi.m  measure_sorts.cpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp  timecounter.cpp
esercitazione5/: CMakeLists.txt  alg_sorting.hpp  measure_sorts.cpp  osservazioni_confronto_algoritmi.txt  test_mergesort.cpp  test_quicksort.cpp
esercitazione6/: CMakeLists.txt  edge_class.hpp  graph_class.hpp  test_edges_graph.cpp
esercitazione7/: CMakeLists.txt  contenitori_class.hpp  edge_class.hpp  graph_class.hpp  print_dot_graph.cpp  test_edges_graph.cpp  visit_dfs_dijkstra.hpp
esercitazione8/: CMakeLists.txt  gradiente_coniugato.hpp  test_gradiente_coniugato.cpp
